--- a/PicShow.html
+++ b/PicShow.html
@@ -76,8 +76,8 @@
 
     <script>
         const imageSources = [
-            'D:/Downloads/wallpaper_engine/image7.jpg',
-            'D:/Downloads/wallpaper_engine/image8.jpg',
+            'image7.jpg',
+            'image8.jpg',
             'D:/Downloads/wallpaper_engine/image9.jpg',
             'D:/Downloads/wallpaper_engine/image10.jpg',
             'D:/Downloads/wallpaper_engine/image11.jpg',
